alignment fixes

--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,7 @@
 .contact {
   padding: 25px;
   color: rgb(255, 255, 255);
+  margin: 0 !important;
 }
 
 input {
